2009-10-08  Andrew John Hughes  <ahughes@redhat.com>

	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java:
	Synchronise whitespace with IcedTea6 copy.
	* netx/net/sourceforge/jnlp/security/HttpsCertVerifier.java:
	Fix find/replace error with cert being changed to cenetx.

2009-09-15  Deepak Bhole  <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaJavaRequestProcessor.cc
	(newMessageOnBus): Handle certain callbacks in a more uniform manner.
	(postAndWaitForResponse): Lower poll time to 200 us for more
	responsiveness.
	(findClass): Accept instance ID which is used for searching classes in
	specific applet instance classloaders.
	(getArrayLength): New function. Returns length of an array on Java side.
	(getSlot): New function. Returns element at requested index in an array.
	(setSlot): New function. Sets requested index in array to supplied value.
	(getField): Accept object id.
	(getStaticField): Fix parameter ordering for consistency.
	(set): New function. Sets Java side fields to given value.
	(setStaticField): New function. Sets value of a static field in a Java
	object.
	(setField): New function. Sets value of a static field in a class.
	(createJavaObjectFromVariant): Handle void and null variants. Handle case
	where object is already created.
	(call): Use a string to store object id.
	(newObject): Same.
	(hasPackage): Accept instance id and pass it on.
	* plugin/icedteanp/IcedTeaJavaRequestProcessor.h: Relevant changes as
	needed by the updates to the .cc file.
	* plugin/icedteanp/IcedTeaNPPlugin.cc
	(get_scriptable_object): Pass false for the new isArray arg to
	get_scriptable_java_object.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc: Pass 0 as the
	instance id to all findClass calls.
	* plugin/icedteanp/IcedTeaScriptablePluginObject.cc: Reuse Java object
	pointers.
	(IcedTeaScriptableJavaPackageObject::hasProperty): Pass the instance id to
	findClass.
	(get_scriptable_java_object): Update code so that Java object pointers can
	be reused.